--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -184,11 +184,11 @@ en:
   successfully_added_word_to_project: "Successfully added word to project."
   failed_to_add_word_to_project: "Failed to add word to project."
   word_does_not_exist: "Word does not exist."
-  remove_from_project: "Remove from project"
+  remove_from_project: "Remove"
   word_removed_successfully: "Word removed successfully."
   word_does_not_exist: "The word you're trying to remove does not exist."
   description_choose_keywords: "The red translation will be imported to your project"
-  no_words_in_project: "Project has now words yet."
+  no_words_in_project: "Project has no words yet."
   email2: "Email Address"
   not_shared: "This project is not shared with anyone yet"
   not_developer: "You have to register as a developer before proceeding."
