--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -330,7 +330,7 @@ ar:
   delete_share: "الغاء الاشتراك"
   confirm_share: " لن تتمكن من رؤية المشروع المشترك بعد الغاء الاشتراك ,هل أنت متأكد من الغاء الاشتراك ؟"
   submit_remove: "الغاء الاشتراك"
-  close_share: "إلغاء"
+  close_share: "لا، شكراً"
   pick_lang: "إختر اللغة التي تريد اللعب بها"
   english_popover_content: "<p>هذا الاختيار يجعلك أن تشكل وتصوت على كلمات إنجليزية فقط<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>التالي</button>"
   english_popover_title: "<h4>الزر الانجليزي</h4>"
