--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -362,3 +362,4 @@ ar:
   enter_a_synonym: "ادخل معني جديد"
   skip_this_keyword: "تخطي هذا المعني"
   suggest_this_synonym: "سجل هذا المعني"
+  formal_or_slang: "<p id='formal_slang'><button class='btn btn-primary'>رسمي</button>&nbsp او &nbsp<button class='btn btn-primary'>بالعامية</button></p>"
