--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -297,7 +297,7 @@ ar:
           attributes:
             date_of_birth:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
-  choose_sub: 'إختر نظام الدفع'           
+  choose_sub: 'نظام الإشتراك'           
   developer_before_subscription: 'من فضلك سجل كمطور لتتمكن من رؤية هذه الصفحة '
   per_month: "/شهر"
   add_twitter_connection: "تم التواصل مع تويتر بنجاح!"
