--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -289,7 +289,7 @@ en:
   education_level: "Education level"
   date_of_birth: "Date of Birth"
   back_to_game: "Back"
-  choose_sub: "choose your subscription model"
+  choose_sub: "Subscription model"
   developer_before_subscription: 'Please sign up as a developer to view this page'
   keyword_added: "keyword added successfully"
   per_month: "/month"
