[Issue #202][Finished] fixed code according to code conventions

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -297,7 +297,7 @@ ar:
   graduate: "خريج"
   school: "مدرسة"
   university: "جامعة"
-  enter_categories: "ﺎﻠﺘﺼﻔﻳﺓ ﺢﺴﺑ ﺎﻠﻔﺋﺎﺗ"
+  enter_categories:  "التصفية حسب الفئات"
   follow_words_info: "إتبع كلمات لتلقي بريد إلكتروني بمعلومات جديدة عن كلماتك. سيصلك بريد إن حصلت كلمة على مرادفات جديدة أو إحدى المرادفات حصلت على أكثر عدد من أصوات."
   synonyms_of: "مرادفات كلمة"
   age_range: "(من فضلك ادخل رقم من 10 الي 100)"
