[Issue #354][WIP] finished all views and logic, uml left

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -316,3 +316,10 @@ en:
   you_have_prizes: "You have won the following prizes!"
   forgot_password: "Forgot your password?"
   remember_me: "Remember me"
+  reset_password: "Reset your password"
+  send_reset_password: "Send me reset password instructions"
+  change_password: "Change my password"
+  change_your_password: "Change your password"
+  someone_has_request: "Someone has requested a link to change your password, and you can do this through the link below."
+  hello: "Hello"
+  ignore_this_reset: "If you didn't request this, please ignore this email."
