--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -321,3 +321,11 @@ ar:
   you_have_prizes: "لقد ربحت الجوائز التالية"
   forgot_password: "هل نسيت كلمة السر؟"
   remember_me: "ابقى متصلاً "
+  reset_password: "إعادة تعيين كلمة المرور الخاصة بك"
+  send_reset_password: "إرسال تعليمات إعادة تعيين كلمة السر"
+  change_password: "تغيير كلمة السر"
+  change_your_password: "تغيير كلمة السر الخاصة بك"
+  some_one_request: "لقد قمت بطلب بيانات الدخول للحساب الخاص بك. يمكنك تغير كلمة السر الخاصة بك من خلال الرابط التالي:"
+  hello: "مرحبا"
+  ignore_this_reset: "إذا لم تقم بطلب تغير كلمة السر ، برجاء تجاهل هذه الرسالة"
+
