[Issue #195][updating] updaed translations for formal/slang

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -41,8 +41,8 @@ ar:
   category: "الفئة"
   categories: "الفئات"
   formality: "النوع"
-  formal: "رسمي"
-  slang: "غير رسمي"
+  formal: "فصحة"
+  slang: "عامي"
   age: "السن"
   from: "من"
   to: "الى"
@@ -370,3 +370,4 @@ ar:
   modal_no_button: "لا"
   you_have_prizes: "لقد ربحت الجوائز التالية"
   wrong_age_input: "ادخلت رقم خطأ"
+  synonyms: "المعاني:"
