--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -364,3 +364,4 @@ en:
   modal_no_button: "No"
   you_have_prizes: "You have won the following prizes!"
   wrong_age_input: "Wrong age input"
+  synonyms: "Synonyms:"
