--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -377,3 +377,4 @@ ar:
   modal_yes_button: "أجل"
   modal_no_button: "لا"
   you_have_prizes: "لقد ربحت الجوائز التالية"
+  no_account: "يبدو انك تركتنا. من فضلك سجل الدخول بحساب جديد."
