--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -370,3 +370,4 @@ en:
   modal_yes_button: "Yes"
   modal_no_button: "No"
   you_have_prizes: "You have won the following prizes!"
+  no_account: "You seem to have left us. Please create a new account"
