--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -327,7 +327,7 @@ en:
   rank: "Rank"
   highest_score: "Highest Score"
   trophies: "Trophies"
-  no_trophies: "No Trophies"
+  no_trophies_won: "No Trophies"
   not_connected_to_twitter: "You are not connected to Twitter, connect from your settings"
   not_connected_to_facebook: "You are not connected to Facebook, connect from your settings"
   loading: "Loading"
