[Issue #370][Fixed buttons and already exisiting words problem

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -33,6 +33,7 @@ ar:
   follow: "تابع"
   following: "متابع"
   backend: "المطورون"
+  rec_back: "العودة"
   project: "مشروع"
   projects: "مشاريع"
   my_projects: "مشاريعي"
