[Issue #195][updating] added some more translations

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -365,3 +365,6 @@ en:
   you_have_prizes: "You have won the following prizes!"
   wrong_age_input: "Wrong age input"
   synonyms: "Synonyms:"
+  school: "School"
+  university: "University"
+  graduate: "Graduate"
