--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -371,3 +371,6 @@ ar:
   you_have_prizes: "لقد ربحت الجوائز التالية"
   wrong_age_input: "ادخلت رقم خطأ"
   synonyms: "المعاني:"
+  school: "مدرسة"
+  university: "جامعة"
+  graduate: "خريج"
