--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -1,14 +1,17 @@
 ar:
   username_or_email: "إسم المستخدم أو البريد الالكتروني"
-  omar_error1: "هذه الكلمة ليست موجودة"
-  omar_error2: "هذا المعنى فارغ"
-  omar_error3: "هذا المعنى موجود بالفعل لهذه الكلمة"
+  not_existing_error: "هذه الكلمة ليست موجودة"
+  empty_name_error: "هذا المعنى فارغ"
+  dupplicate_error: "هذا المعنى موجود بالفعل لهذه الكلمة"
+  invalid_format_error: "هذا المعنى ليس باللغة العربية"
   arability: "عربيليتي"
   sign_up: "إنشاء حساب"
   sign_in: "تسجيل الدخول"
   sign_out: "تسجيل خروج"
   english: "English"
-  arabic: "العربية"
+  english_button: "الانجليزية"
+  arabic_button: "العربية"
+  both_button: "كلاهما"
   email: "البريد الالكتروني"
   email2: "البريد الالكتروني"
   password: "كلمة السر"
@@ -38,15 +41,15 @@ ar:
   category: "الفئة"
   categories: "الفئات"
   formality: "النوع"
-  formal: "رسمي"
-  slang: "غير رسمي"
-  age: "السن"
+  formal: "فصحى"
+  slang: "عامية"
+  age: "الفئة العمرية"
   from: "من"
   to: "الى"
-  desc: "الوصف"
+  desc: "عن المشروع"
   new_project: "مشروع جديد"
   create_project: "انشاء مشروع"
-  back: "عودة"
+  back: "<< عودة"
   edit_project: "تعديل المشروع"
   save_project: "حفظ المشروع"
   import: "استيراد"
@@ -112,11 +115,13 @@ ar:
   projects_index_categories: "فئات: "
   projects_index_description: "وصف: "
   projects_index_edit: " تعديل"
+  projects_index_delete: " مسح"
   projects_index_no_shared_projects: "ليس لديك أي مشاريع مشتركة"
   no_categories: "هذا المشروع ليس له فئات"
   no_description: "هذا المشروع ليس له وصف"
   description_choose_keywords: "المرادف الاحمر سيتم استخدامه في مشروعك"
   select subscription: "إختر"
+  exceeded_project_limit: "عذرا لا يمكنك انشاء مشاريع اخرى. برجاء الاشتراك في انظمة بريميوم او ديلوكس"
   error: "اخطاء"
   cancel: "الغاء"
   prohibited_project_error: "اخطاء منعت عملية الحفظ"
@@ -138,14 +143,6 @@ ar:
     failure:
       gamer:
         invalid: "لقد ادخلت بيانات غير صحيحة، يرجى إعادة المحاولة "
-  activerecord:
-    attributes:
-      project:
-        name: 'الاسم'
-        minAge: 'السن'
-        maxAge: 'السن'
-        categories: "الفئات"
-        description: "الوصف"
     errors:
       models:
         gamer:
@@ -174,12 +171,6 @@ ar:
               blank: "برجاء إدخال كلمة"
               invalid: "برجاء أدخال حروف عربية أو إنجليزية فقط"
               taken: "هذه الكلمة موجودة بالفعل"
-        category:
-          attributes:
-            name:
-              blank: "برجاء إدخال فئة"
-              invalid: "برجاء أدخال حروف عربية أو إنجليزية فقط"
-              taken: "هذه فئة موجودة بالفعل"
   keyword_not_found: "عفوا! لا توجد بقاعدة البيانات ما يطابق كلمة البحث."
   add_word: "اضف الكلمة"
   stats_gender: "احصائيات الجنس"
@@ -229,17 +220,12 @@ ar:
   activerecord:
     models:
       developer: "مطور"
-    attributes:
-      developer:
-        first_name: "الاسم الاول"
-        last_name: "إسم العائلة"
   not_in_range: "ليس في الحدود المسموح بها"
   connect_to: "تواصل مع"
   disconnect_from: "افصل تواصلك مع"
   facebook: "فيسبوك"
   my_info: "معلوماتي"
   social_media: "التواصل الاجتماعي"
-  logged_in_to_fb: "مبروك!! لقد تمت عملية التواصل بنجاح. تمتع بخاصياتك الجديدة."
   logged_out_of_fb: "تم فصل الفيس بنجاح"
   shared_on_fb: "مبروك فزت بجائزة الحلوى"
   error_fb: "شكرا و لكن لا نريد ان نحتل التايملاين الخاص بك"
@@ -297,10 +283,100 @@ ar:
           attributes:
             date_of_birth:
               before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام' 
+  project_removed: "تم مسح المشروع المشترك"            
+  activerecord:
+    attributes:
+      project:
+        name: 'الاسم'
+        minAge: 'السن'
+        maxAge: 'السن'
+        categories: "الفئات"
+        description: "الوصف"
+        before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام'
+  project_delete: "تم مسح المشروع بنجاح"
+  won_prizes_title: "الجوائز التي تم الحصول عليها "
+  not_won_prizes_title: "الجوائز المتاحة "
+  no_prizes: "لم تلعب بمافيه كفاية حتى يظهر لك الجوائز التي تم الحصول عليها"
+  all_prizes: "لقد فزت بجميع الجوائز"
+  before_or_equal_to: 'يجب أن يكون أكثر من عشر سنوات وأقل  من تسعون عام'
+  report_sent: "تم تقديم التقرير بنجاح. سوف يتم ابلاغك بالايميل عند إتخاذ تصرف"
+  report_abusive: "حدد الكلمات غير اللائقة"
+  report: "إبلغ من هنا"
+  help_us_through_reporting: > 
+    ساعدونا في تحديد الكلمات غير اللائقة عن طريق إختيار الكلمات. عند ملئك هذه 
+    الإستمارة يتم عرض الكلمات على الأدمن و يتم إخطارك عن طريق الايميل في حال 
+    إتخاذ موقف من الطلب.
+  words_in_page: "الكلمات التي يمكن اختيارها بالصفحة:"
+  close: "إغلاق"
+  submit: "تسليم التقرير"
+  report_sent_success: "تمت العملية بنجاح"
+  help_us_report: "هل تري اي كلمات غير مناسبة؟"
+  oh_snap: "عفواً، لقد حدث خطأ ما!"
+  check_connection: >
+    يبدو أن هناك خطأ منع إستكمال طلبك. من فضلك عاود المحاولة.
   add_twitter_connection: "تم التواصل مع تويتر بنجاح!"
-  remove_twitter_connection: "تم إلغاء التواصل مع تويتر بنجاح!"
+  remove_social_connection: "تم إلغاء التواصل بنجاح!"
   connection_failure: "فشل التواصل!"
   already_connected: "التواصل بالفعل موجود!"
   remove_connection: "إلغاء الاتصال مع تويتر"
   connect_to_twitter: "تواصل مع تويتر"
+  Email_dont: "هذا البريد الالكتروني غير صحيح"
+  Email_for_a_gamer: "هذا البريد الالكتروني ليس لمطور"
+  you_cant_share_with_yourself: "لا يمكنك مشاركة هذا المشروع مع نفسك"
+  already_shared_project: "تم مشاركة هذا المشروع سابقا"
+  project_successfully_shared: "لقد تم مشاركة هذا المشروع بنجاح"
+  dev_unshare: "تم عدم المشاركة"
+  delete_share: "الغاء الاشتراك"
+  confirm_share: " لن تتمكن من رؤية المشروع المشترك بعد الغاء الاشتراك,هل أنت متأكد من الغاء الاشتراك ؟"
+  submit_remove: "الغاء الاشتراك"
+  close_share: "لا، شكراً"
+  confirm: "هل أنت متأكد من مسح المشروع ؟"
+  delete: "مسح"
+  close_delete: "الغاء"
+  submit_delete: "مسح"
   you_have_prizes: "لقد ربحت الجوائز التالية"
+  fill_in_next: "من فضلك املأ الفراغات التالية"
+  or: "أو"
+  existing_account: "سجل بحساب اخر"
+  signed_in_exst: "تم التواصل بنجاح بإستخدام حساب اخر"
+  signed_in_fb: "تم الدخول بنجاح بإستخدام فيسبوك"
+  logged_in_to_fb: "حسابك الآن متصل بفيسبوك"
+  oops_error_fb: "واجهتنا مشاكل حين حولنا التواصل مع فيسبوك من فضلك حاول التواصل مرة أخرى"
+  already_connected_fb: "لقد قمت بتسجيل الدخول من قبل و حسابك متصل بفيسبوك بالفعل"
+  errors_prohibited: "اخطاء منعتك من التسجيل"
+  sign_up_e_acc: "سجل بحساب اخر"
+  continue_reg_fb: "لقد اعطانا فيسبوك بعض المعلومات. من فضلك املأ الفراغات لتكملة التسجيل"
+  won_trophies_title: "الانجازات التي تم اكمالها"
+  not_won_trophies_title: "الانجازات التي بامكانك اكمالها "
+  no_trophies: "لم تكمل أي انجازات حتى الأن"
+  all_trophies: "لقد أكملت كل الانجازات التي بمكانك انجزها "
+  you_have_score: "مبروك! لقد سجلت النقاط التالية"
+  share_your_score: "شارك على الشبكات الاجتماعية!"
+  you_have_won_these_trophies: "لقد حققت الانجازات التالية!"
+  game_over: "انتهت اللعبة"
+  lose_score: "لقد سجلت النقاط التالية"
+  pick_lang: "إختر اللغة التي تريد اللعب بها"
+  english_popover_content: "<p>هذا الاختيار يجعلك أن تشكل وتصوت على كلمات إنجليزية فقط<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='eng-btn-po'onclick='destroy(this.id)'>التالي</button>"
+  english_popover_title: "<h4>الزر الانجليزي</h4>"
+  arabic_popover_content: "<p>هذا الاختيار يجعلك أن تشكل وتصوت على كلمات عربية فقط<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='ar-btn-po'onclick='destroy(this.id)'>التالي</button>"
+  arabic_popover_title: "<h4>الزر العربي</h4>"
+  both_popover_content: "<p>هذا الاختيار يجعلك أن تشكل وتصوت على كلمات عربية و إنجلزية<p> <button class='tutBtn btn btn-primary' style='width: 120px; height:30px; font-size: 20px; color: white;' id='both-btn-po'onclick='destroy(this.id)'>التالي</button>"
+  both_popover_title: "<h4>زر كلاهما</h4>"
+  words_list_popover_content: "<p>هذه القائمة تحتوي على الكلمات التي يجب عليك تكوينها. الكلمات ذات اللون البرتقالي جاهزة للتكوين، بعكس السوداء.<p> <button onclick='callNextToolTip(this.id)' class='tutBtn btn btn-primary' id='wordsList-po'>التالي</button>"
+  words_list_popover_title: "<h4>قائمة الكلمات</h4>"
+  word_label_popover_content: "<p>هذا المكان يحتوي على الحروف التي تم الضغط عليها<p> <button onclick='callNextToolTip2(this.id)' class='btn btn-primary' id='wordLabel-po'>التالي</button>"
+  word_label_popover_title: "<h4>مكان الحروف</h4>"
+  table_popover_content: "لكي تشكل كلمة، يجب أن تضغط على الحروف التي على الشاشة، و لاحظ أن الحروف لا يجب أن تكون بجانب بعضها، و يجب تشكيل جميع الكلمات المطلوبة قبل وصول الحروف إلى القمة. حاول الضغط على حرف الأن"
+  table_popover_title: "تشكيل الكلمات"
+  clicked_button_popover_content: "كما تري الأن الزر لونه برتقالي، و هذا يعني إنه إذا قمت بضغطه مرة أخرى، سيتم حذفه من الكلمة. لاحظ أن الزر الأخير فقط هو الذي يمكن حذفه، وإذا كنت تريد حذف الكلمة كلها يمكنك الضغط على زر حذف الكلمة "
+  clicked_button_popover_title: "ضغط على حرف"
+  clicked_button_popover_button: "إبدأ اللعب"
+  flashing_tower_popover_content: "إنتبه أنت تقترب من القمة. أسرع"
+  flashing_tower_popover_title: "إقتراب من القمة"
+  flashing_tower_popover_button: "أكمل"
+  modal_header: "مبروك"
+  modal_body: "لقد أكملت أول مرحلة. هل تريد أن ترى هذه الخطوات التعلمية مرة أخرى في المرة القادمة؟"
+  modal_yes_button: "أجل"
+  modal_no_button: "لا"
+  you_have_prizes: "لقد ربحت الجوائز التالية"
+  unshare: " الغاء الاشتراك"
