--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -378,3 +378,4 @@ ar:
   modal_no_button: "لا"
   you_have_prizes: "لقد ربحت الجوائز التالية"
   no_account: "يبدو انك تركتنا. من فضلك سجل الدخول بحساب جديد."
+  expired_token: "يبدو ان اتصالك مع فيسبوك كان به مشكلة. و لكن لا تقلق, لقد قمنا باصلاح المشكلة"
