--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -139,11 +139,12 @@ en:
   stats_age: "Age Statistics"
   stats_education: "Education Statistics"
   stats_no_votes: "Sorry! this synonym has no votes yet!"
+  exceeded_project_limit: "You have reached the maximum number of projects allowed. Please subscribe to Premium or Deluxe to create more."
   controller:
-   subscription:
-     messages_errors:
+    subscription:
+      messages_errors:
         you_have_successfully_chosen_your_model: 'you have successfully chosen your model'
-        please_choose: 'please choose your subscription model'
+    please_choose: 'please choose your subscription model'
   already_registered_developer: "You are already registered as a developer. Don't you remember?"
   failed_developer_registration: "Failed to complete registration: Please make sure you entered valid information."
   no_developer: "Please register as a developer before you choose your subscription model."
