[Issue #363] Finished help in english

--- a/arability/config/locales/api.yml
+++ b/arability/config/locales/api.yml
@@ -28,8 +28,8 @@ ar:
   project_small_text: "(يمكنك إختيار مشروع لربطه بمفتاح ال-API)"
   your_api_keys: "مفاتيح ال-API"
   delete: "مسح"
-  are_you_sure: "Are you sure you want to delete this API key"
-  confirm: "Confirm Deletion"
+  are_you_sure: "هل أنت متأكد أنك تريد مسح هذا المفتاح"
+  confirm: "تأكيد المسح"
   close: "لا شكراً"
   api_key: "مفتاح ال-API"
   back_to_api: "الرجوع إلى صفحة ال-API"
