[issue #350] fixed black dropdowns, fixed link to developers

--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -399,3 +399,5 @@ en:
   modal_no_button: "No"
   you_have_prizes: "You have won the following prizes!"
   no_account: "You seem to have left us. Please create a new account"
+  feat4h: "Be Social"
+  feat4b: "For extra features, connect to your favorite social network."
