--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -382,3 +382,9 @@ ar:
   modal_no_button: "لا"
   you_have_prizes: "لقد ربحت الجوائز التالية"
   no_account: "يبدو انك تركتنا. من فضلك سجل الدخول بحساب جديد."
+  resend_confirmation: "إعادة إرسال تعليمات التفعيل"
+  send: "ارسل "
+  hello: "مرحبا"
+  confirm_body: " يمكنك تأكيد حساب البريد الإلكتروني الخاص بك من خلال الرابط"
+  confirm_button: "تفعيل الحساب"
+
