--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -325,7 +325,7 @@ en:
   already_connected: "already connected to Twitter!"
   remove_connection: "Remove Connection"
   connect_to_twitter: "Connect to Twitter"
-  routing_error: "Sorry, we seem to have misplaced the page you were looking for."
+  routing_error: "Error 404: Page not found."
   exception: "Oops, this is embarassing. A problem has occured, however we have notified an administrator and are working to fix it."
   you_have_prizes: "You have won the following prizes!"
   caro1h: "Arabilty"
