[Issue #360] [WIP] fixes report button in game

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -383,3 +383,4 @@ ar:
   is_this_translation: "هل هذا المعني"
   must_specify_formality: "يجب ان تختار سواء كان المعني رسمي او غير رسمي"
   choose_formality: "اختر"
+  report_game: "إبلاغ"
