--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -376,3 +376,4 @@ en:
   is_this_translation: "Is this translation"
   must_specify_formality: "you need to choose whether translation is formal or slang"
   choose_formality: "choose formality"
+  report_game: "Report"
