[Issue #359][WIP] fixed scenario

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -1,4 +1,6 @@
 ar:
+  welcome_gamer: "مبروك! لقد تم تسجيلك كلاعب"
+  welcome_guest: "انت الان على نسخة محدودة من اللعبة. اشترك لتتمتع بالنسخة الكاملة"
   username_or_email: "إسم المستخدم أو البريد الالكتروني"
   not_existing_error: "هذه الكلمة ليست موجودة"
   empty_name_error: "هذا المعنى فارغ"
