[issue #353] [Fixed fixes a translation bug

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -409,3 +409,5 @@ ar:
   no_translation_popover_content: "تبيمسب،"
   you_can: "تستطيع ان "
   this_keyword: " هذة الكلمة"
+  project_keyword_follow: "تتابع"
+  project_keyword_unfollow: "تلغي متابعة"
