--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -420,3 +420,4 @@ ar:
   feat4h: "تواصل"
   feat4b: "للمزيد من الخصيات توصل مع المواقع الإجتماعية المفضلة لديك."
   expired_token: "يبدو ان اتصالك مع فيسبوك كان به مشكلة. و لكن لا تقلق, لقد قمنا باصلاح المشكلة"
+  mail_place: "من فضلك إدخل الاسم أو البريد الالكتروني "
