--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -424,3 +424,4 @@ ar:
   feat4b: "للمزيد من الخصيات توصل مع المواقع الإجتماعية المفضلة لديك."
   expired_token: "يبدو ان اتصالك مع فيسبوك كان به مشكلة. و لكن لا تقلق, لقد قمنا باصلاح المشكلة"
   mail_place: "من فضلك إدخل الاسم أو البريد الالكتروني "
+  back_share: "<< عودة إلى المشروع"
