[Issue #372][Finished] changed back button to game button and removed link to game in vote log view

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -419,6 +419,5 @@ ar:
   vote_log: "اصواتك السابقة" 
   no_you: "انت"
   no_vote_log: "لم تختار اي معني لاي كلمة حتي الان!!"
-  back_log: "الرجوع"
-  play_link_log: "ابدأ اللعبة"
+  back_log: "اللعبة"
   vote_log_button: "الأصوات"
