--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -178,7 +178,7 @@ en:
   import_csv_list2: "Non-arabic synonyms will not be accepted"
   import_csv_list3: "The file has to be in csv format and UTF-8 encoded"
   import_csv_list4: "You can import more than one synonym for a keyword but the first one will be used in your project"
-  import_csv_list5: "Tou can change the synonym later"
+  import_csv_list5: "You can change the synonym later"
   java_script_disabled : "Be smarter than that"
   upload_file_error1: "You did not choose a file"
   upload_file_error2: "This file is not UTF-8 encoded"
