[issue #353] [Fixed] fixes the alerts of the follow/unfollow word inside project

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -405,9 +405,10 @@ ar:
   modal_no_button: "لا"
   you_have_prizes: "لقد ربحت الجوائز التالية"
   no_account: "يبدو انك تركتنا. من فضلك سجل الدخول بحساب جديد."
-  no_translation_popover_title: "لا يوجد معاني لهدة الكلمة حاليا "
+  no_translation_popover_title: "لا يوجد معاني لهذه الكلمة حاليا "
   no_translation_popover_content: "تبيمسب،"
   you_can: "تستطيع ان "
   this_keyword: " هذة الكلمة"
   project_keyword_follow: "تتابع"
   project_keyword_unfollow: "تلغي متابعة"
+  you_followed_word: "لقد تابعت هذه الكلمة من قبل"
