--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -406,3 +406,4 @@ en:
   this_keyword: " this keyword"
   project_keyword_follow: "follow"
   project_keyword_unfollow: "unfollow"
+  you_followed_word: "you have already followed this keyword"
