--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -340,7 +340,7 @@ ar:
   no_trophies_won: "لا يوجد جوائز"
   not_connected_to_twitter: "أنت غير متصل بتويتر، يمكنك التواصل عبر تغيير البيانات"
   not_connected_to_facebook: "أنت غير متصل بفيس بوك، يمكنك التواصل عبر تغيير البيانات"
-  loading: "تحميل"
+  loading: "جاري التحميل"
   connected_before: "حساب تويتر هذا متصل مع حساب عربيليتي اخر"
   confirm: "هل أنت متأكد من مسح المشروع ؟"
   delete: "مسح"
