fixed scenario comments

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -330,8 +330,8 @@ ar:
   you_have_prizes: "لقد ربحت الجوائز التالية"
   forgot_password: "هل نسيت كلمة السر؟"
   remember_me: "ابقى متصلاً "
-  reset_password: "إعادة تعيين كلمة المرور الخاصة بك"
-  send_reset_password: "إرسال تعليمات إعادة تعيين كلمة السر"
+  reset_password: "إعادة تعيين كلمة المرور"
+  send_reset_password: "ارسل "
   change_password: "تغيير كلمة السر"
   change_your_password: "تغيير كلمة السر الخاصة بك"
   someone_has_request: "لقد قمت بطلب بيانات الدخول للحساب الخاص بك. يمكنك تغير كلمة السر الخاصة بك من خلال الرابط التالي:"
