[#361] adds connection to google

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -407,3 +407,8 @@ ar:
   feat4h: "تواصل"
   feat4b: "للمزيد من الخصيات توصل مع المواقع الإجتماعية المفضلة لديك."
   expired_token: "يبدو ان اتصالك مع فيسبوك كان به مشكلة. و لكن لا تقلق, لقد قمنا باصلاح المشكلة"
+  signed_in_google: "تم الدخول بنجاح بإستخدام جوجل"
+  continue_reg_google: "لقد اعطانا جوجل بعض المعلومات. من فضلك املأ الفراغات لتكملة التسجيل"
+  logged_in_to_google: "حسابك الآن متصل بـجوجل"
+  connected_to_google: "انت متصل بجوجل بالفعل"
+  oops_error_google: "واجهتنا مشاكل حين حولنا التواصل مع جوجل من فضلك حاول التواصل مرة أخرى"
