--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -402,3 +402,9 @@ en:
   feat4h: "Be Social"
   feat4b: "For extra features, connect to your favorite social network."
   expired_token: "Oops it seems your connection with facebook has expired. But don't worry, we solved the problem"
+  
+  signed_in_google: "Signed in succesfully via google"
+  continue_reg_google: "Google provided us with some information about you. Please fill in the rest to continue your registration"
+  logged_in_to_google: "Your account is now connected to Google"
+  connected_to_google: "You are already signed in and connected to Google."
+  oops_error_google: "Oops an error has occured while communicating with Google. Please try again"
