--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -340,9 +340,9 @@ en:
         project:
           attributes:
             minAge:
-              minAge_range: "has to be between 9 and 99 years"
+              minAge_range: "has to be a number between 9 and 99 years"
             maxAge:
-              maxAge_range: "has to be between 10 and 100 years"
+              maxAge_range: "has to be a number between 10 and 100 years"
               less_than_minAge: "can not be less than the minimum age"
   username: "Username"
   password_confirmation: "Password confirmation"
@@ -524,9 +524,9 @@ en:
         project:
           attributes:
             minAge:
-              minAge_range: "has to be between 9 and 99 years"
+              minAge_range: "has to be a number between 9 and 99 years"
             maxAge:
-              maxAge_range: "has to be between 10 and 100 years"
+              maxAge_range: "has to be a number between 10 and 100 years"
               less_than_minAge: "can not be less than the minimum age"
     attributes:
       project:
