--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -586,3 +586,5 @@ en:
   vote_log_button: "Votes"
   mail_place: "Please enter name or email"
   back_share: "<< Back to projects"
+  no_votes_visuals: "Sorry, no one voted for this synonym yet!"
+  no_votes_visuals_popup: "left"
