--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -573,3 +573,4 @@ ar:
   vote_log_button: "الأصوات"
   mail_place: "من فضلك إدخل الاسم أو البريد الالكتروني "
   back_share: "<< عودة إلى المشروع"
+  you_need_to_connect_fb: "يجب ان تكون متصلا بفيسبوك"
