--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -590,3 +590,4 @@ en:
   vote_log_button: "Votes"
   mail_place: "Please enter name or email"
   back_share: "<< Back to projects"
+  you_need_to_connect_fb: "You need to connect to facebook first"
