[#198][#199][finished] handled scenario

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -587,3 +587,4 @@ ar:
   vote_log_button: "الأصوات"
   mail_place: "من فضلك إدخل الاسم أو البريد الالكتروني "
   back_share: "<< عودة إلى المشروع"
+  have_to_sign_in: "يجب عليك تسجيل الدخول لتتمكن من رؤية هذه الصفحة"
