--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -603,3 +603,4 @@ en:
   vote_log_button: "Votes"
   mail_place: "Please enter name or email"
   back_share: "<< Back to projects"
+  have_to_sign_in: "You have to sign in to view this page"
