fixed get trophies view to get prizes also in same view

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -584,3 +584,4 @@ ar:
   back_share: "<< عودة إلى المشروع"
   no_votes_visuals: "عفوا, لا يوجد اصوات لهذه الكلمة"
   no_votes_visuals_popup: "right"
+  congrats_you_won: "مبروك لقد ربحت "
