--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -404,7 +404,7 @@ en:
   won_trophies_title: "Earned Trophies"
   not_won_trophies_title: "Available Trophies"
   no_trophies: "Oh oh! It seems that you haven't played the game enough and you still haven't won any trophies! Go Play now!"
-  all_trophies: "Wow! You have one all the trophies!"
+  all_trophies: "Wow! You have won all the trophies!"
   you_have_score: "Congratulations! you have scored"
   share_your_score: "Share your score!"
   you_have_won_these_trophies: "You have won these trophies too!"
@@ -499,7 +499,7 @@ en:
   won_trophies_title: "Earned Trophies"
   not_won_trophies_title: "Available Trophies"
   no_trophies: "Oh oh! It seems that you haven't played the game enough and you still haven't won any trophies! Go Play now!"
-  all_trophies: "Wow! You have one all the trophies!"
+  all_trophies: "Wow! You have won all the trophies!"
   you_have_score: "Congratulations! you have scored"
   share_your_score: "Share your score!"
   you_have_won_these_trophies: "You have won these trophies too!"
@@ -607,3 +607,4 @@ en:
   back_share: "<< Back to projects"
   no_votes_visuals: "Sorry, no one voted for this synonym yet!"
   no_votes_visuals_popup: "left"
+  congrats_you_won: "Congratulations! You have won!"
