--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -629,3 +629,6 @@ ar:
   vote_log_button: "الأصوات"
   mail_place: "من فضلك إدخل الاسم أو البريد الالكتروني "
   back_share: "<< عودة إلى المشروع"
+  search_not_allowed: >
+    عفوا! لقد استنفذت الكلمات التي يمكنك البحث عنها، و لكن يمكنك الاستمرار في 
+    البحث عن الكلمات التي بحثت عنها مسبقا.
