--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -585,3 +585,5 @@ en:
   vote_log_button: "Votes"
   mail_place: "Please enter name or email"
   back_share: "<< Back to projects"
+  score_popover_content: "The bigger the word is, the higher your score will be, and the faster you form the  word, the higher your score will be, you can keep track of how fast you are forming the word from the timer next to each word"
+  score_popover_title: "How the Score is calculated"
