[issue #177] Added following limits

--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -309,7 +309,7 @@ ar:
   out_of: "من"
   keyword_not_empty: "يجب الا يكون مكان الكلمة فارغ"
   enter_categories: "ابحث في التصنيفات"
-  follow_words_info: "إتبع كلمات لتلقي بريد إلكتروني بمعلومات جديدة عن كلماتك. سيصلك بريد إن حصلت كلمة على مرادفات جديدة."
+  follow_words_info: "إتبع كلمات لتلقي بريد إلكتروني بمعلومات جديدة عن كلماتك. سيصلك بريد إن حصلت كلمة على مرادفات جديدة. لمتابعة  كلمة ابحث عنها ثم إضغط تابع."
   synonyms_of: "مرادفات كلمة"
   age_range: "(من فضلك ادخل رقم من 10 الي 100)"
   enter_keyword: "أدخل كلمة"
@@ -613,3 +613,4 @@ ar:
   vote_log_button: "الأصوات"
   mail_place: "من فضلك إدخل الاسم أو البريد الالكتروني "
   back_share: "<< عودة إلى المشروع"
+  followmaxtip: "لقد وصلت الحد المسموح لإتباع الكلمات."
