--- a/arability/config/locales/ar.yml
+++ b/arability/config/locales/ar.yml
@@ -588,3 +588,5 @@ ar:
   back_share: "<< عودة إلى المشروع"
   no_votes_visuals: "عفوا, لا يوجد اصوات لهذه الكلمة"
   no_votes_visuals_popup: "right"
+  menu: "اختيارات"
+  profile: "بروفيل"
