--- a/arability/config/locales/en.yml
+++ b/arability/config/locales/en.yml
@@ -611,3 +611,5 @@ en:
   back_share: "<< Back to projects"
   no_votes_visuals: "Sorry, no one voted for this synonym yet!"
   no_votes_visuals_popup: "left"
+  menu: "Menu"
+  profile: "Profile"
