--- a/arability/config/locales/devise.ar.yml
+++ b/arability/config/locales/devise.ar.yml
@@ -6,9 +6,8 @@ ar:
       already_confirmed: "تم تأكيده مسبقاً، حاول تسجيل الدخول من فضلك"
       not_locked: "لم يتم إغلاقه"
       not_saved:
-
-        one: "الخطأ التالي منع %{resource} من أن يحفظ:"
-        other: " الأخطاء الـ %{count} التالية منعت %{resource} من أن يحفظ:"
+        one: ""
+        other: ""
   activerecord:
     attributes:
       gamer:
