--- a/arability/config/locales/devise.ar.yml
+++ b/arability/config/locales/devise.ar.yml
@@ -26,7 +26,8 @@ ar:
     failure:
       already_authenticated: 'لقد قمت بتسجيل الدخول مسبقاً.'
       unauthenticated: 'تحتاج لتسجيل الدخول أو الاشتراك قبل المتابعة.'
-      unconfirmed: "لا بد من تأكيد حسابك قبل المتابعة. لم يصلك رسالة التفعيل ؟ <a href='/ar/gamers/confirmation/new'>إعادة إرسال</a>"
+      unconfirmed: "لا بد من تأكيد حسابك قبل المتابعة. لم يصلك رسالة التفعيل ؟"
+      resend_text: "لم تتلقى رسالة التفعيل؟ إعادة إرسال"
       resend: "إعادة إرسال"
       locked: 'حسابك مغلق.'
       invalid: "البيانات التي ادخلتها غير صحيحة "
